# receipt-scanner

./: .gitignore  CHANGELOG.md  README.md  TROUBLESHOOTING.md  netlify.toml  railway.json
.github/workflows/: deploy.yml
receipt-scanner-app/receipt-scanner-backend/: .dockerignore  .env  .env.example  .railwayignore  AI_OCR_README.md  Dockerfile  RAILWAY_ENV.md  UPDATE_POETRY_LOCK.md  init_db.py  pyproject.toml  requirements.txt  test_auth.py  test_db.py  test_ocr.py
receipt-scanner-app/receipt-scanner-backend/app/: ai_processor.py  auth.py  auth_routes.py  config.py  database.py  db_models.py  main.py  main_backup.py  models.py  ocr_processor.py  receipt_processor.py
receipt-scanner-app/receipt-scanner-frontend/: .env  .env.example  index.html  package-lock.json  package.json  test-plan.md  vite.config.ts
receipt-scanner-app/receipt-scanner-frontend/src/: App.css  App.tsx
receipt-scanner-app/receipt-scanner-frontend/src/api/: index.ts
receipt-scanner-app/receipt-scanner-frontend/src/types/: index.ts
supabase/: config.toml
supabase/functions/receipt-upload/: index.ts
supabase/migrations/: 001_create_receipts_table.sql
