[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.12"}
psycopg = {extras = ["binary"], version = "^3.2.9"}
python-multipart = "^0.0.20"
pillow = "^11.2.1"
pytesseract = "^0.3.13"
langchain-openai = "^0.3.16"
python-dotenv = "^1.1.0"
langchain = "^0.3.25"
pillow-heif = "^0.16.0"  # HEIC/HEIF support for iPhone photos
pydantic = "^2.5.0"  # For data validation
python-dateutil = "^2.8.2"  # For date parsing
openai = "^1.0.0"  # For Vision API

# Optional dependencies for advanced image processing
[tool.poetry.group.cv]
optional = true

[tool.poetry.group.cv.dependencies]
opencv-python = "^4.9.0.80"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
